--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "server/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "dev": "concurrently 'npm:dev:frontend' 'npm:dev:backend'",
+    "dev:frontend": "vite",
+    "dev:backend": "nodemon server/index.js",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
