--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "main": "server/index.js",
   "scripts": {
-    "dev": "concurrently 'npm:dev:frontend' 'npm:dev:backend'",
     "dev:frontend": "vite",
     "dev:backend": "nodemon server/index.js",
+    "dev": "concurrently 'npm:dev:frontend' 'npm:dev:backend'",
+    "start": "NODE_ENV=production node server/index.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "vue": "^3.4.37"
   },
